[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monkeyui"
dynamic = ["version"]
description = "An Enterprise-grade PySide6 UI Component Library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.4.2",
]

[tool.setuptools.dynamic]
version = { attr = "ultralytics.__version__" }

[project.urls]
"Homepage" = "https://github.com/luohuabuxiema/MonkeyUI"
